--- a/la-mia-pizzeria/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Index.cshtml
@@ -64,7 +64,7 @@
                                 <a class="btn btn-outline-secondary mb-1" href="@Url.Action("Details", "Pizza", new {id = Model.IndexOf(pizza)})">
                                     <i class="fa-solid fa-eye"></i>
                                 </a>
-                                <a class="btn btn-outline-primary mb-1" href="@Url.Action("Details", "Pizza", new {id = Model.IndexOf(pizza)})">
+                                <a class="btn btn-outline-primary mb-1" href="@Url.Action("Edit", "Pizza", new {id = Model.IndexOf(pizza)})">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </a>
                                 <a class="btn btn-outline-danger mb-1" href="@Url.Action("Details", "Pizza", new {id = Model.IndexOf(pizza)})">
