--- a/la-mia-pizzeria/Views/Shared/MainLayout.cshtml
+++ b/la-mia-pizzeria/Views/Shared/MainLayout.cshtml
@@ -28,43 +28,20 @@
 <body>
     <div class="text-center">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
-            <a class="navbar-brand" href="#">Static Pizzeria</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <!-- Application Header -->
+        <header>
+            <partial name="_Header" />
+        </header>
 
+        <!-- Application Main -->
         <main>
             @RenderBody()
         </main>
 
+        <!-- Application Footer -->
         <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; 2023 - la_mia_pizzeria_static - Francesco Limpias
+                &copy; @DateTime.Now.Year - la_mia_pizzeria_static - Francesco Limpias
             </div>
         </footer>
 
