Major update @ Header - updated structure to match Bootstrap 5.3 - added Home and Developer - added comments
+ minor fix @ MainLayout

--- a/la-mia-pizzeria/Views/Shared/MainLayout.cshtml
+++ b/la-mia-pizzeria/Views/Shared/MainLayout.cshtml
@@ -41,7 +41,7 @@
         <!-- Application Footer -->
         <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; @DateTime.Now.Year - la_mia_pizzeria_static - Francesco Limpias
+                Francesco Limpias &copy; @DateTime.Now.Year -> la_mia_pizzeria_static
             </div>
         </footer>
 
