--- a/la-mia-pizzeria/Views/Developer/Index.cshtml
+++ b/la-mia-pizzeria/Views/Developer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<la_mia_pizzeria_static.Models.DeveloperCommandModel>
+﻿@using la_mia_pizzeria_static.Models.Utility;
+@model IEnumerable<la_mia_pizzeria_static.Models.Utility.DeveloperCommandsGroup>
 
 @{
     ViewData["Title"] = "Developer Console";
@@ -7,56 +8,62 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<table class="table">
+<div class="container">
+    @foreach (DeveloperCommandsGroup group in Model)
+    {
+        <br />
+        <h3>
+            @group.Name
+        </h3>
+        <table class="table">
 
-    <thead>
-        <tr>
-            <th>Command</th>
-            <th>Staus</th>
-            <th>Action</th>
-        </tr>
-    </thead>
+            <thead>
+                <tr>
+                    <th>Command</th>
+                    <th>Status</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
 
-    <tbody>
+            <tbody>
 
-        @{
-            int index = 0;
-        }
-        @foreach (DeveloperCommandModel command in Model)
-        {
-            <tr>
+                @foreach (DeveloperCommandModel command in group.Commands)
+                {
+                    <tr>
 
-                <!-- Command name -->
-                <td class="align-middle">@command.Name</td>
+                        <!-- Command name -->
+                        <td class="align-middle">@command.Name</td>
 
-                <!-- Command status (switch idle/success/fail) -->
-                <td class="align-middle">
-                    @if (command.Status == null)
-                    {
-                        <span>idle</span>
-                    }
-                    else if ((bool)command.Status)
-                    {
-                        <span>Success</span>
-                        <i class="fa-solid fa-check" style="color: #198754;"></i>
-                    }
-                    else
-                    {
-                        <span>Failed</span>
-                        <i class="fa-solid fa-circle-exclamation" style="color: #dc3545;"></i>
-                    }
-                </td>
+                        <!-- Command status (switch idle/success/fail) -->
+                        <td class="align-middle">
+                            @if (command.Status == null)
+                            {
+                                <span>idle</span>
+                            }
+                            else if ((bool)command.Status)
+                            {
+                                <span>Success</span>
+                                <i class="fa-solid fa-check" style="color: #198754;"></i>
+                            }
+                            else
+                            {
+                                <span>Failed</span>
+                                <i class="fa-solid fa-circle-exclamation" style="color: #dc3545;"></i>
+                            }
+                        </td>
 
-                <!-- Command actions -->
-                <td>
-                    <form asp-controller="Developer" asp-action="Execute" method="POST">
-                        @Html.AntiForgeryToken()
-                        <button name="index" class="btn btn-outline-warning" type="submit" value="@index">Run</button>
-                    </form>
-                </td>
+                        <!-- Command actions -->
+                        <td>
+                            <form asp-controller="Developer" asp-action="Execute" method="POST">
+                                @Html.AntiForgeryToken()
+                                <button name="guid" class="btn btn-outline-warning" type="submit" value="@command.DeveloperCommandModelGuid">Run</button>
+                            </form>
+                        </td>
 
-            </tr>
-            index++;
-        }
-    </tbody>
-</table>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+
+</div>
