Refactor @ Pizza System - refactor & rename @ PizzaSeeder (from PizzasSeeder) - refactor fields @ Pizza model - refactor for Database support @ PizzaController - subsequent refactors @ Pizza/* views
+ Shortened description min length to 3 words
+ Added Clear & Seed pizzas DeveperCommands

--- a/la-mia-pizzeria/Views/Pizza/Details.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Details.cshtml
@@ -16,7 +16,7 @@
         <div class="px-3">
 
             <!-- Pizza title -->
-            <h2>Pizza @Model.name</h2>
+            <h2>Pizza @Model.Name</h2>
             <br />
 
             <!-- Pizza image -->
@@ -36,11 +36,11 @@
             <p>
                 <br />
 
-                @Model.description
+                @Model.Description
 
                 <br />
 
-                Prezzo: <b>@Model.price€</b>
+                Prezzo: <b>@Model.Price€</b>
             </p>
 
             <!-- Go back -->
