--- a/la-mia-pizzeria/Views/Pizza/Create.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model la_mia_pizzeria_static.Pizza
-
+﻿@model PizzaPayload
 @{
     ViewData["Title"] = "Inserisci";
     Layout = "~/Views/Shared/MainLayout.cshtml";
@@ -15,19 +14,31 @@
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group mb-2">
-            <label asp-for="name" class="control-label"></label>
-            <input asp-for="name" class="form-control" />
-            <span asp-validation-for="name" class="text-danger"></span>
+            <label asp-for="Pizza.Name" class="control-label"></label>
+            <input asp-for="Pizza.Name" class="form-control" />
+            <span asp-validation-for="Pizza.Name" class="text-danger"></span>
         </div>
         <div class="form-group mb-2">
-            <label asp-for="description" class="control-label"></label>
-            <input asp-for="description" class="form-control" />
-            <span asp-validation-for="description" class="text-danger"></span>
+            <label asp-for="Pizza.Description" class="control-label"></label>
+            <input asp-for="Pizza.Description" class="form-control" />
+            <span asp-validation-for="Pizza.Description" class="text-danger"></span>
         </div>
         <div class="form-group mb-2">
-            <label asp-for="price" class="control-label"></label>
-            <input type="number" asp-for="price" class="form-control" />
-            <span asp-validation-for="price" class="text-danger"></span>
+            <label asp-for="Pizza.Price" class="control-label"></label>
+            <input type="number" asp-for="Pizza.Price" class="form-control" />
+            <span asp-validation-for="Pizza.Price" class="text-danger"></span>
+        </div>
+        <div class="form-group mb-2">
+            <label asp-for="Pizza.CategoryId" class="control-label"></label>
+            <select asp-for="Pizza.CategoryId" class="form-control">
+                @foreach(Category category in Model.Categories)
+                {
+                    <option value="@category.CategoryId">
+                        @category.Name
+                    </option>
+                }
+            </select>
+            <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
         </div>
         <div class="form-group">
             <a class="btn btn-outline-secondary" href="@Url.Action("Index", "Pizza")">Indietro</a>
