--- a/la-mia-pizzeria/Views/Pizza/Edit.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model la_mia_pizzeria_static.Pizza
+﻿@model Pizza
 
 @{
     ViewData["Title"] = "Modifica";
@@ -15,19 +15,19 @@
         @Html.AntiForgeryToken()
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group mb-2">
-            <label asp-for="name" class="control-label"></label>
-            <input asp-for="name" class="form-control" />
-            <span asp-validation-for="name" class="text-danger"></span>
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group mb-2">
-            <label asp-for="description" class="control-label"></label>
-            <input asp-for="description" class="form-control" />
-            <span asp-validation-for="description" class="text-danger"></span>
+            <label asp-for="Description" class="control-label"></label>
+            <input asp-for="Description" class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
         </div>
         <div class="form-group mb-2">
-            <label asp-for="price" class="control-label"></label>
-            <input type="number" asp-for="price" class="form-control" />
-            <span asp-validation-for="price" class="text-danger"></span>
+            <label asp-for="Price" class="control-label"></label>
+            <input type="number" asp-for="Price" class="form-control" />
+            <span asp-validation-for="Price" class="text-danger"></span>
         </div>
         <div class="form-group">
             <a class="btn btn-outline-secondary" href="@Url.Action("Index", "Pizza")">Indietro</a>
