Refactor @ DeveloperCommands System - Now developer commands act as questions or queries, so command status now is represented as check, mark or null - Added a utility function to quickly add groups of commands related to models management - subsequent refactors @ Seeder System (added ISeeder interface)
+ minor fix @ DeveloperController

--- a/la-mia-pizzeria/Views/Developer/Index.cshtml
+++ b/la-mia-pizzeria/Views/Developer/Index.cshtml
@@ -20,7 +20,7 @@
             <thead>
                 <tr>
                     <th>Command</th>
-                    <th>Status</th>
+                    <th>Response</th>
                     <th>Action</th>
                 </tr>
             </thead>
@@ -38,17 +38,15 @@
                         <td class="align-middle">
                             @if (command.Status == null)
                             {
-                                <span>idle</span>
+                                <span>--</span>
                             }
                             else if ((bool)command.Status)
                             {
-                                <span>Success</span>
                                 <i class="fa-solid fa-check" style="color: #198754;"></i>
                             }
                             else
                             {
-                                <span>Failed</span>
-                                <i class="fa-solid fa-circle-exclamation" style="color: #dc3545;"></i>
+                                <i class="fa-solid fa-xmark" style="color: #dc3545;"></i>
                             }
                         </td>
 
