Added Categories support @ Pizza System - added partial _Form view for pizza (edit/create) - refactored Pizza's views - refactored views calls @ PizzaController
+ minor fix @ Developer view

--- a/la-mia-pizzeria/Views/Developer/Index.cshtml
+++ b/la-mia-pizzeria/Views/Developer/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<la_mia_pizzeria_static.Models.Utility.DeveloperCommandsGroup>
 
 @{
-    ViewData["Title"] = "Developer Console";
+    ViewData["Title"] = "Developer Endpoints";
     Layout = "~/Views/Shared/MainLayout.cshtml";
 }
 
