--- a/la-mia-pizzeria/Views/Pizza/Details.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Details.cshtml
@@ -32,11 +32,15 @@
             }
             <br />
 
-            <!-- Pizza price -->
+            <!-- Pizza details -->
             <p>
                 <br />
 
                 @Model.Description
+
+                <br />
+
+                Categoria: <b>@Model?.Category?.Name</b>
 
                 <br />
 
