--- a/la-mia-pizzeria/Views/Pizza/Create.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Create.cshtml
@@ -5,46 +5,14 @@
 }
 
 <div class="text-center px-3">
-    <h1>Inserisci</h1>
 
+    <!-- Header -->
+    <h1>@ViewData["Title"]</h1>
     <h4>Pizza</h4>
     <hr />
 
-    <form asp-action="Create" method="post" class="mb-3">
-        @Html.AntiForgeryToken()
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group mb-2">
-            <label asp-for="Pizza.Name" class="control-label"></label>
-            <input asp-for="Pizza.Name" class="form-control" />
-            <span asp-validation-for="Pizza.Name" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-2">
-            <label asp-for="Pizza.Description" class="control-label"></label>
-            <input asp-for="Pizza.Description" class="form-control" />
-            <span asp-validation-for="Pizza.Description" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-2">
-            <label asp-for="Pizza.Price" class="control-label"></label>
-            <input type="number" asp-for="Pizza.Price" class="form-control" />
-            <span asp-validation-for="Pizza.Price" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-2">
-            <label asp-for="Pizza.CategoryId" class="control-label"></label>
-            <select asp-for="Pizza.CategoryId" class="form-control">
-                @foreach(Category category in Model.Categories)
-                {
-                    <option value="@category.CategoryId">
-                        @category.Name
-                    </option>
-                }
-            </select>
-            <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <a class="btn btn-outline-secondary" href="@Url.Action("Index", "Pizza")">Indietro</a>
-            <input type="submit" value="Inserisci" class="btn btn-primary" />
-        </div>
-    </form>
+    <!-- Partial Form -->
+    <partial name="_Form" model='("Create", Model)' />
 
 </div>
 
