--- a/la-mia-pizzeria/Views/Pizza/Edit.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Edit.cshtml
@@ -1,39 +1,18 @@
-﻿@model Pizza
-
+﻿@model PizzaPayload
 @{
     ViewData["Title"] = "Modifica";
     Layout = "~/Views/Shared/MainLayout.cshtml";
 }
 
 <div class="text-center px-3">
-    <h1>Inserisci</h1>
 
+    <!-- Header -->
+    <h1>@ViewData["Title"]</h1>
     <h4>Pizza</h4>
     <hr />
 
-    <form asp-action="Edit" method="post" class="mb-3">
-        @Html.AntiForgeryToken()
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group mb-2">
-            <label asp-for="Name" class="control-label"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-2">
-            <label asp-for="Description" class="control-label"></label>
-            <input asp-for="Description" class="form-control" />
-            <span asp-validation-for="Description" class="text-danger"></span>
-        </div>
-        <div class="form-group mb-2">
-            <label asp-for="Price" class="control-label"></label>
-            <input type="number" asp-for="Price" class="form-control" />
-            <span asp-validation-for="Price" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <a class="btn btn-outline-secondary" href="@Url.Action("Index", "Pizza")">Indietro</a>
-            <input type="submit" value="Modifica" class="btn btn-primary" />
-        </div>
-    </form>
+    <!-- Partial Form -->
+    <partial name="_Form" model='("Edit", Model)' />
 
 </div>
 
