--- a/la-mia-pizzeria/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Index.cshtml
@@ -19,7 +19,7 @@
             </a>
 
 
-            @if (Model.Count == 0)
+            @if (Model.Count() == 0)
             {
                 <h3>404 Pizzas not found :(</h3>
             }
@@ -30,17 +30,21 @@
                     <thead>
                         <tr>
                             <th class="text-danger">nome</th>
+                            <th>categoria</th>
                             <th>descrizione</th>
                             <th>foto</th>
                             <th>prezzo</th>
                             <th>azioni</th>
                         </tr>
                     </thead>
-                    @foreach (Pizza pizza in @Model)
+                    @foreach (Pizza pizza in Model)
                     {
                         <tr>
                             <td class="align-middle">
                                 @pizza.Name
+                            </td>
+                            <td class="align-middle">
+                                @pizza?.Category?.Name
                             </td>
                             <td class="align-middle">
                                 @pizza.Description
