Added Exception handling @ Developer System - added Exception field @ DeveloperCommand - added Exception view and controller function - added Exception "show" button @ Index view
Now commands have 4 response display: null/true/false/exception.
You may access Exception details via dedicated window ( /Developer/ExceptionPopup ).
A dedicated button @ Developer Index view will open a ExceptionPopup window for you.

--- a/la-mia-pizzeria/Views/Developer/Index.cshtml
+++ b/la-mia-pizzeria/Views/Developer/Index.cshtml
@@ -3,10 +3,21 @@
 
 @{
     ViewData["Title"] = "Developer Endpoints";
-    Layout = "~/Views/Shared/MainLayout.cshtml";
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<script type="text/javascript">
+    function openErrorWindow() {
+        window.open(
+            '/Developer/ExceptionPopup',
+            'ErrorDetail',
+            'height=' + 350 + "px"
+            + ',width=' + 700 + "px"
+            + ',left=500,top=10,status=no,toolbar=no,resizable=yes,scrollbars=yes'
+        );
+    }
+</script>
 
 <div class="container">
     @foreach (DeveloperCommandsGroup group in Model)
@@ -36,11 +47,17 @@
 
                         <!-- Command status (switch idle/success/fail) -->
                         <td class="align-middle">
-                            @if (command.Status == null)
+                            @if (command.Response == null)
                             {
                                 <span>--</span>
                             }
-                            else if ((bool)command.Status)
+                            else if (command.Exception != null)
+                            {
+                                <button class="btn btn-danger btn-sm rounded-pill" onclick="openErrorWindow()">
+                                    ERROR
+                                </button>
+                            }
+                            else if ((bool)command.Response)
                             {
                                 <i class="fa-solid fa-check" style="color: #198754;"></i>
                             }
