Added Ingredients - added Ingredient model & accordingly refactored other models - added IngredientSeeder & updated PizzaSeeder (w/ingredients) - updated Pizza views with ingredients - updated PizzaController to support Ingredients - added DeveloperCommandGroup for Ingredients - added Ingredients to PizzeriaContext

--- a/la-mia-pizzeria/Views/Pizza/Details.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Details.cshtml
@@ -41,7 +41,17 @@
 
                 Categoria: <b>@Model?.Category?.Name</b>
 
-                <br />
+                <div class="">
+                    <span>
+                        Ingredienti:
+                    </span>
+                    <ul class="list-group">
+                        @foreach(Ingredient ingredient in Model?.Ingredients)
+                        {
+                            <li class="list-group-item">@ingredient.Name @ingredient.Symbol</li>
+                        }
+                    </ul>
+                </div>
 
                 Prezzo: <b>@Model.Price€</b>
             </p>
