--- a/la-mia-pizzeria/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria/Views/Pizza/Index.cshtml
@@ -13,9 +13,12 @@
 
     <main>
         <div class="px-3">
-            <a class="btn btn-primary" href="@Url.Action("Create", "Pizza")">
-                Inserisci una pizza
-            </a>
+            @if (User.IsInRole("ADMIN"))
+            {
+                <a class="btn btn-primary" href="@Url.Action("Create", "Pizza")">
+                    Inserisci una pizza
+                </a>
+            }
 
 
             @if (Model.Count() == 0)
@@ -79,17 +82,21 @@
                                     <a class="btn btn-outline-secondary mb-1" href="@Url.Action("Details", "Pizza", new {id = pizza.PizzaId})">
                                         <i class="fa-solid fa-eye"></i>
                                     </a>
-                                    <a class="btn btn-outline-primary mb-1" href="@Url.Action("Edit", "Pizza", new {id = pizza.PizzaId})">
-                                        <i class="fa-solid fa-pen-to-square"></i>
-                                    </a>
 
-                                    <form asp-controller="Pizza" asp-action="Delete" asp-route-id="@pizza.PizzaId" method="post">
-                                        @Html.AntiForgeryToken()
-                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                        <button type="submit" class="btn btn-outline-danger">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </form>
+                                    @if (User.IsInRole("ADMIN"))
+                                    {
+                                        <a class="btn btn-outline-primary mb-1" href="@Url.Action("Edit", "Pizza", new {id = pizza.PizzaId})">
+                                            <i class="fa-solid fa-pen-to-square"></i>
+                                        </a>
+
+                                        <form asp-controller="Pizza" asp-action="Delete" asp-route-id="@pizza.PizzaId" method="post">
+                                            @Html.AntiForgeryToken()
+                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                            <button type="submit" class="btn btn-outline-danger">
+                                                <i class="fa-solid fa-trash"></i>
+                                            </button>
+                                        </form>
+                                    }
                                 </div>
                             </th>
                         </tr>
